--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 920px;
 }
 
 .jumbotron {
@@ -30,16 +31,27 @@ textarea{
   border-radius: 15px;
 }
 
+.input-group-text {
+  border: none;
+}
+
+.form-control {
+  border: none;
+}
+
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid black;;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  width: 100px;
+  text-align: center;
+  padding: 20px;
 }
 
 .past {
@@ -63,50 +75,11 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  width: 120px;
+  font-size: 20px;
 }
 
 .saveBtn i:hover {
-  font-size: 20px;
+  font-size: 40px;
   transition: all .3s ease-in-out;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-input {
-  height: 50px;
-  width: 100%;
-  padding: 6px;
-  margin-top: 10px;
-  font-size: 2.4em;
-  border: solid black 2px;
-}
-
-.for {
-    align-items: center;
-    font-size: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    width: 400px;
-}
-
-.input {
-  width: 100%;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  background-color: grey;
-  border: green solid 2px;
-  float: left;
-  
-}
-
-.button{
-  float: right;
-  background-color: greenyellow;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-.row {
-  border: black solid 2px;
 }
